--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,33 +365,33 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-27 22:52:20</em></div>
-<div class="line"><em>Last bowl scored:  GATOR BOWL (Missouri vs. Virginia)</em></div>
+<div class="line"><em>Last updated:  2025-12-28 00:13:35</em></div>
+<div class="line"><em>Last bowl scored:  TEXAS BOWL (Houston vs. LSU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Sherrone Moore's Bad Day 15.25</div>
-<div class="line">2. Arandas legacy Year 15.0</div>
+<div class="line">1. Sherrone Moore's Bad Day 16.25</div>
+<div class="line">2. Arandas legacy Year 16.0</div>
 <div class="line">3. <strong>Dazed and Confoosballed 14.75</strong></div>
 <div class="line">3. Upside 14.75</div>
 <div class="line">5. Eclipse 14.25</div>
-<div class="line">6. <strong>Vibe-free since '73 13.25</strong></div>
-<div class="line">7. Barkside Ballers 12.75</div>
-<div class="line">8. <strong>Battered Austin Syndrome 12.0</strong></div>
-<div class="line">8. BlueOrRed 12.0</div>
-<div class="line">8. Game of Throws 12.0</div>
-<div class="line">11. Wisconsin shoud've been here 11.75</div>
-<div class="line">11. Bearly Watching 11.75</div>
-<div class="line">11. First Round SIL 11.75</div>
-<div class="line">11. Not So New Guy 11.75</div>
-<div class="line">11. We Pay Players 11.75</div>
-<div class="line">16. Sierra LeCat Dowdle 11.25</div>
-<div class="line">16. Mama Dawg 11.25</div>
-<div class="line">18. #MamaBear 11.0</div>
-<div class="line">18. Just Call Me Dr. 11.0</div>
-<div class="line">20. NoNND-Bo 1 10.75</div>
-<div class="line">21. NoNND-Bo 2 9.25</div>
-<div class="line">22. Down 9.0</div>
-<div class="line">23. Momma Longhorn 8.75</div>
+<div class="line">6. Barkside Ballers 13.75</div>
+<div class="line">6. Wisconsin shoud've been here 13.75</div>
+<div class="line">8. <strong>Vibe-free since '73 13.25</strong></div>
+<div class="line">8. Mama Dawg 13.25</div>
+<div class="line">10. Game of Throws 13.0</div>
+<div class="line">11. NoNND-Bo 1 12.75</div>
+<div class="line">11. Not So New Guy 12.75</div>
+<div class="line">13. Sierra LeCat Dowdle 12.25</div>
+<div class="line">14. <strong>Battered Austin Syndrome 12.0</strong></div>
+<div class="line">14. #MamaBear 12.0</div>
+<div class="line">14. BlueOrRed 12.0</div>
+<div class="line">14. Just Call Me Dr. 12.0</div>
+<div class="line">18. Bearly Watching 11.75</div>
+<div class="line">18. First Round SIL 11.75</div>
+<div class="line">18. We Pay Players 11.75</div>
+<div class="line">21. Down 10.0</div>
+<div class="line">22. Momma Longhorn 9.75</div>
+<div class="line">23. NoNND-Bo 2 9.25</div>
 <div class="line">24. Sascha Picks Dogs 8.25</div>
 <div class="line">24. Call Me An Optimist 8.25</div>
 <div class="line">26. bugaroo 8.0</div>
