--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -996,38 +996,71 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>18</td>
+<td>TEXAS BOWL</td>
+<td>Houston</td>
+<td>LSU</td>
+<td>3.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>12.75</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>13.25</strong></td>
 <td><strong>14.75</strong></td>
 <td><strong>8.25</strong></td>
 <td><strong>7.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>8.75</strong></td>
+<td><strong>16.25</strong></td>
+<td><strong>9.75</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>12.25</strong></td>
 <td><strong>12.0</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>10.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>12.75</strong></td>
 <td><strong>9.25</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>8.25</strong></td>
-<td><strong>9.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>14.25</strong></td>
 <td><strong>11.75</strong></td>
-<td><strong>11.0</strong></td>
 <td><strong>12.0</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>12.75</strong></td>
 <td><strong>14.75</strong></td>
 <td><strong>11.75</strong></td>
-<td><strong>12.0</strong></td>
+<td><strong>13.0</strong></td>
 </tr>
 </tbody>
 </table>
