--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1128,6 +1128,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>22</td>
+<td>TEXAS BOWL</td>
+<td>Houston</td>
+<td>LSU</td>
+<td>3.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1232,33 +1265,33 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>19.25</strong></td>
+<td><strong>20.25</strong></td>
 <td><strong>22.75</strong></td>
 <td><strong>20.75</strong></td>
 <td><strong>14.75</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>15.0</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>19.0</strong></td>
-<td><strong>19.75</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>23.75</strong></td>
 <td><strong>15.75</strong></td>
-<td><strong>18.25</strong></td>
+<td><strong>15.0</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>23.5</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>21.75</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>20.25</strong></td>
 <td><strong>20.25</strong></td>
 <td><strong>13.75</strong></td>
-<td><strong>19.5</strong></td>
+<td><strong>20.5</strong></td>
 <td><strong>21.25</strong></td>
 <td><strong>17.75</strong></td>
+<td><strong>19.0</strong></td>
 <td><strong>18.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>18.0</strong></td>
-<td><strong>15.75</strong></td>
+<td><strong>19.0</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>18.75</strong></td>
 <td><strong>19.75</strong></td>
-<td><strong>16.0</strong></td>
+<td><strong>17.0</strong></td>
 </tr>
 </tbody>
 </table>
