--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,16 +365,16 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-28 00:13:38</em></div>
+<div class="line"><em>Last updated:  2025-12-28 00:19:03</em></div>
 <div class="line"><em>Last bowl scored:  TEXAS BOWL (Houston vs. LSU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Sherrone Moore's Bad Day 23.75</div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 23.75</strong></div>
 <div class="line">2. <strong>Battered Austin Syndrome 23.5</strong></div>
 <div class="line">3. <strong>Vibe-free since '73 22.75</strong></div>
 <div class="line">4. Mama Dawg 21.75</div>
 <div class="line">5. Eclipse 21.25</div>
-<div class="line">6. <strong>Dazed and Confoosballed 20.75</strong></div>
+<div class="line">6. Dazed and Confoosballed 20.75</div>
 <div class="line">7. Down 20.5</div>
 <div class="line">8. Barkside Ballers 20.25</div>
 <div class="line">8. Wisconsin shoud've been here 20.25</div>
