--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,13 +365,13 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-28 00:13:35</em></div>
+<div class="line"><em>Last updated:  2025-12-28 00:19:01</em></div>
 <div class="line"><em>Last bowl scored:  TEXAS BOWL (Houston vs. LSU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Sherrone Moore's Bad Day 16.25</div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 16.25</strong></div>
 <div class="line">2. Arandas legacy Year 16.0</div>
-<div class="line">3. <strong>Dazed and Confoosballed 14.75</strong></div>
+<div class="line">3. Dazed and Confoosballed 14.75</div>
 <div class="line">3. Upside 14.75</div>
 <div class="line">5. Eclipse 14.25</div>
 <div class="line">6. Barkside Ballers 13.75</div>
