ga south. win 12-29

--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-28 00:19:03</em></div>
-<div class="line"><em>Last bowl scored:  TEXAS BOWL (Houston vs. LSU)</em></div>
+<div class="line"><em>Last updated:  2025-12-29 18:36:23</em></div>
+<div class="line"><em>Last bowl scored:  BIRMINGHAM BOWL (Georgia Southern vs. Appalachain State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sherrone Moore's Bad Day 23.75</strong></div>
-<div class="line">2. <strong>Battered Austin Syndrome 23.5</strong></div>
-<div class="line">3. <strong>Vibe-free since '73 22.75</strong></div>
-<div class="line">4. Mama Dawg 21.75</div>
-<div class="line">5. Eclipse 21.25</div>
-<div class="line">6. Dazed and Confoosballed 20.75</div>
-<div class="line">7. Down 20.5</div>
-<div class="line">8. Barkside Ballers 20.25</div>
-<div class="line">8. Wisconsin shoud've been here 20.25</div>
-<div class="line">8. Bearly Watching 20.25</div>
-<div class="line">11. Arandas legacy Year 20.0</div>
-<div class="line">12. We Pay Players 19.75</div>
-<div class="line">13. #MamaBear 19.0</div>
-<div class="line">13. Just Call Me Dr. 19.0</div>
-<div class="line">15. Upside 18.75</div>
-<div class="line">16. BlueOrRed 18.0</div>
-<div class="line">17. Sierra LeCat Dowdle 17.75</div>
-<div class="line">17. First Round SIL 17.75</div>
-<div class="line">19. Game of Throws 17.0</div>
-<div class="line">20. NoNND-Bo 1 16.75</div>
-<div class="line">20. Not So New Guy 16.75</div>
-<div class="line">22. Momma Longhorn 15.75</div>
-<div class="line">22. NoNND-Bo 2 15.75</div>
-<div class="line">24. bugaroo 15.0</div>
+<div class="line">1. <strong>Battered Austin Syndrome 24.5</strong></div>
+<div class="line">2. <strong>Vibe-free since '73 23.75</strong></div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 23.75</strong></div>
+<div class="line">4. Mama Dawg 22.75</div>
+<div class="line">5. Eclipse 22.25</div>
+<div class="line">6. Dazed and Confoosballed 21.75</div>
+<div class="line">7. Down 21.5</div>
+<div class="line">8. Barkside Ballers 21.25</div>
+<div class="line">8. Wisconsin shoud've been here 21.25</div>
+<div class="line">8. Bearly Watching 21.25</div>
+<div class="line">11. Arandas legacy Year 21.0</div>
+<div class="line">12. #MamaBear 20.0</div>
+<div class="line">12. Just Call Me Dr. 20.0</div>
+<div class="line">14. Upside 19.75</div>
+<div class="line">14. We Pay Players 19.75</div>
+<div class="line">16. BlueOrRed 19.0</div>
+<div class="line">17. Game of Throws 18.0</div>
+<div class="line">18. Sierra LeCat Dowdle 17.75</div>
+<div class="line">18. NoNND-Bo 1 17.75</div>
+<div class="line">18. First Round SIL 17.75</div>
+<div class="line">21. Momma Longhorn 16.75</div>
+<div class="line">21. Not So New Guy 16.75</div>
+<div class="line">23. bugaroo 16.0</div>
+<div class="line">24. NoNND-Bo 2 15.75</div>
 <div class="line">25. Sascha Picks Dogs 14.75</div>
 <div class="line">26. Call Me An Optimist 13.75</div>
-<div class="line">27. <strong>The New Mendoza Line 10.0</strong></div>
+<div class="line">27. <strong>The New Mendoza Line 11.0</strong></div>
 </div>
 </div>
 </body>
