--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-28 00:19:01</em></div>
-<div class="line"><em>Last bowl scored:  TEXAS BOWL (Houston vs. LSU)</em></div>
+<div class="line"><em>Last updated:  2025-12-29 18:36:20</em></div>
+<div class="line"><em>Last bowl scored:  BIRMINGHAM BOWL (Georgia Southern vs. Appalachain State)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sherrone Moore's Bad Day 16.25</strong></div>
-<div class="line">2. Arandas legacy Year 16.0</div>
-<div class="line">3. Dazed and Confoosballed 14.75</div>
-<div class="line">3. Upside 14.75</div>
-<div class="line">5. Eclipse 14.25</div>
-<div class="line">6. Barkside Ballers 13.75</div>
-<div class="line">6. Wisconsin shoud've been here 13.75</div>
-<div class="line">8. <strong>Vibe-free since '73 13.25</strong></div>
-<div class="line">8. Mama Dawg 13.25</div>
-<div class="line">10. Game of Throws 13.0</div>
-<div class="line">11. NoNND-Bo 1 12.75</div>
-<div class="line">11. Not So New Guy 12.75</div>
-<div class="line">13. Sierra LeCat Dowdle 12.25</div>
-<div class="line">14. <strong>Battered Austin Syndrome 12.0</strong></div>
-<div class="line">14. #MamaBear 12.0</div>
-<div class="line">14. BlueOrRed 12.0</div>
-<div class="line">14. Just Call Me Dr. 12.0</div>
-<div class="line">18. Bearly Watching 11.75</div>
-<div class="line">18. First Round SIL 11.75</div>
-<div class="line">18. We Pay Players 11.75</div>
-<div class="line">21. Down 10.0</div>
-<div class="line">22. Momma Longhorn 9.75</div>
+<div class="line">1. Arandas legacy Year 17.0</div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 16.25</strong></div>
+<div class="line">3. Dazed and Confoosballed 15.75</div>
+<div class="line">3. Upside 15.75</div>
+<div class="line">5. Eclipse 15.25</div>
+<div class="line">6. Barkside Ballers 14.75</div>
+<div class="line">6. Wisconsin shoud've been here 14.75</div>
+<div class="line">8. <strong>Vibe-free since '73 14.25</strong></div>
+<div class="line">8. Mama Dawg 14.25</div>
+<div class="line">10. Game of Throws 14.0</div>
+<div class="line">11. NoNND-Bo 1 13.75</div>
+<div class="line">12. <strong>Battered Austin Syndrome 13.0</strong></div>
+<div class="line">12. #MamaBear 13.0</div>
+<div class="line">12. BlueOrRed 13.0</div>
+<div class="line">12. Just Call Me Dr. 13.0</div>
+<div class="line">16. Bearly Watching 12.75</div>
+<div class="line">16. Not So New Guy 12.75</div>
+<div class="line">18. Sierra LeCat Dowdle 12.25</div>
+<div class="line">19. First Round SIL 11.75</div>
+<div class="line">19. We Pay Players 11.75</div>
+<div class="line">21. Down 11.0</div>
+<div class="line">22. Momma Longhorn 10.75</div>
 <div class="line">23. NoNND-Bo 2 9.25</div>
-<div class="line">24. Sascha Picks Dogs 8.25</div>
-<div class="line">24. Call Me An Optimist 8.25</div>
-<div class="line">26. bugaroo 8.0</div>
-<div class="line">27. <strong>The New Mendoza Line 7.0</strong></div>
+<div class="line">24. bugaroo 9.0</div>
+<div class="line">25. Sascha Picks Dogs 8.25</div>
+<div class="line">25. Call Me An Optimist 8.25</div>
+<div class="line">27. <strong>The New Mendoza Line 8.0</strong></div>
 </div>
 </div>
 </body>
