--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1062,38 +1062,71 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>20</td>
+<td>INDEPENDENCE BOWL</td>
+<td>Louisiana Tech</td>
+<td>Coastal Carolina</td>
+<td>6.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>14.75</strong></td>
-<td><strong>14.25</strong></td>
 <td><strong>15.75</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>8.25</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>16.25</strong></td>
+<td><strong>17.25</strong></td>
 <td><strong>10.75</strong></td>
-<td><strong>9.0</strong></td>
+<td><strong>10.0</strong></td>
 <td><strong>12.25</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>14.25</strong></td>
-<td><strong>13.75</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>18.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>9.25</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>12.75</strong></td>
+<td><strong>13.75</strong></td>
 <td><strong>8.25</strong></td>
-<td><strong>11.0</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>11.75</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>13.0</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>15.75</strong></td>
+<td><strong>12.0</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>14.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>16.75</strong></td>
+<td><strong>11.75</strong></td>
+<td><strong>15.0</strong></td>
 </tr>
 </tbody>
 </table>
