--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,19 +365,19 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-30 17:12:09</em></div>
-<div class="line"><em>Last bowl scored:  INDEPENDENCE BOWL (Louisiana Tech vs. Coastal Carolina)</em></div>
+<div class="line"><em>Last updated:  2025-12-30 20:11:13</em></div>
+<div class="line"><em>Last bowl scored:  MUSIC CITY BOWL (Tennessee vs. Illiniois)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Battered Austin Syndrome 25.5</strong></div>
-<div class="line">2. <strong>Vibe-free since '73 24.75</strong></div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 24.75</strong></div>
-<div class="line">4. Mama Dawg 23.75</div>
-<div class="line">5. Eclipse 23.25</div>
-<div class="line">6. Dazed and Confoosballed 22.75</div>
-<div class="line">7. Down 22.5</div>
-<div class="line">8. Barkside Ballers 22.25</div>
-<div class="line">8. Bearly Watching 22.25</div>
+<div class="line">1. <strong>Battered Austin Syndrome 27.0</strong></div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 26.25</strong></div>
+<div class="line">3. Mama Dawg 25.25</div>
+<div class="line">4. <strong>Vibe-free since '73 24.75</strong></div>
+<div class="line">5. Barkside Ballers 23.75</div>
+<div class="line">6. Eclipse 23.25</div>
+<div class="line">7. Dazed and Confoosballed 22.75</div>
+<div class="line">8. Down 22.5</div>
+<div class="line">9. Bearly Watching 22.25</div>
 <div class="line">10. Arandas legacy Year 22.0</div>
 <div class="line">11. Wisconsin shoud've been here 21.25</div>
 <div class="line">12. #MamaBear 21.0</div>
@@ -385,16 +385,16 @@ ul.auto-toc {
 <div class="line">14. Upside 20.75</div>
 <div class="line">15. BlueOrRed 20.0</div>
 <div class="line">16. We Pay Players 19.75</div>
-<div class="line">17. Game of Throws 19.0</div>
-<div class="line">18. NoNND-Bo 1 18.75</div>
-<div class="line">19. Sierra LeCat Dowdle 17.75</div>
-<div class="line">19. First Round SIL 17.75</div>
-<div class="line">21. bugaroo 17.0</div>
-<div class="line">22. Momma Longhorn 16.75</div>
-<div class="line">22. Not So New Guy 16.75</div>
-<div class="line">24. NoNND-Bo 2 15.75</div>
-<div class="line">25. Sascha Picks Dogs 14.75</div>
-<div class="line">26. Call Me An Optimist 13.75</div>
+<div class="line">17. Sierra LeCat Dowdle 19.25</div>
+<div class="line">18. Game of Throws 19.0</div>
+<div class="line">19. NoNND-Bo 1 18.75</div>
+<div class="line">20. First Round SIL 17.75</div>
+<div class="line">21. NoNND-Bo 2 17.25</div>
+<div class="line">22. bugaroo 17.0</div>
+<div class="line">23. Momma Longhorn 16.75</div>
+<div class="line">23. Not So New Guy 16.75</div>
+<div class="line">25. Sascha Picks Dogs 16.25</div>
+<div class="line">26. Call Me An Optimist 15.25</div>
 <div class="line">27. <strong>The New Mendoza Line 11.0</strong></div>
 </div>
 </div>
