--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-30 17:12:07</em></div>
-<div class="line"><em>Last bowl scored:  INDEPENDENCE BOWL (Louisiana Tech vs. Coastal Carolina)</em></div>
+<div class="line"><em>Last updated:  2025-12-30 20:11:11</em></div>
+<div class="line"><em>Last bowl scored:  MUSIC CITY BOWL (Tennessee vs. Illiniois)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Arandas legacy Year 18.0</div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 17.25</strong></div>
-<div class="line">3. Dazed and Confoosballed 16.75</div>
-<div class="line">3. Upside 16.75</div>
-<div class="line">5. Eclipse 16.25</div>
-<div class="line">6. Barkside Ballers 15.75</div>
-<div class="line">7. <strong>Vibe-free since '73 15.25</strong></div>
-<div class="line">7. Mama Dawg 15.25</div>
-<div class="line">9. Game of Throws 15.0</div>
-<div class="line">10. NoNND-Bo 1 14.75</div>
-<div class="line">10. Wisconsin shoud've been here 14.75</div>
-<div class="line">12. <strong>Battered Austin Syndrome 14.0</strong></div>
-<div class="line">12. #MamaBear 14.0</div>
-<div class="line">12. BlueOrRed 14.0</div>
-<div class="line">12. Just Call Me Dr. 14.0</div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 18.75</strong></div>
+<div class="line">2. Arandas legacy Year 18.0</div>
+<div class="line">3. Barkside Ballers 17.25</div>
+<div class="line">4. Dazed and Confoosballed 16.75</div>
+<div class="line">4. Mama Dawg 16.75</div>
+<div class="line">4. Upside 16.75</div>
+<div class="line">7. Eclipse 16.25</div>
+<div class="line">8. <strong>Battered Austin Syndrome 15.5</strong></div>
+<div class="line">9. <strong>Vibe-free since '73 15.25</strong></div>
+<div class="line">10. Game of Throws 15.0</div>
+<div class="line">11. NoNND-Bo 1 14.75</div>
+<div class="line">11. Wisconsin shoud've been here 14.75</div>
+<div class="line">13. #MamaBear 14.0</div>
+<div class="line">13. BlueOrRed 14.0</div>
+<div class="line">13. Just Call Me Dr. 14.0</div>
+<div class="line">16. Sierra LeCat Dowdle 13.75</div>
 <div class="line">16. Bearly Watching 13.75</div>
-<div class="line">17. Not So New Guy 12.75</div>
-<div class="line">18. Sierra LeCat Dowdle 12.25</div>
+<div class="line">18. Not So New Guy 12.75</div>
 <div class="line">19. Down 12.0</div>
 <div class="line">20. First Round SIL 11.75</div>
 <div class="line">20. We Pay Players 11.75</div>
 <div class="line">22. Momma Longhorn 10.75</div>
-<div class="line">23. bugaroo 10.0</div>
-<div class="line">24. NoNND-Bo 2 9.25</div>
-<div class="line">25. Sascha Picks Dogs 8.25</div>
-<div class="line">25. Call Me An Optimist 8.25</div>
+<div class="line">22. NoNND-Bo 2 10.75</div>
+<div class="line">24. bugaroo 10.0</div>
+<div class="line">25. Sascha Picks Dogs 9.75</div>
+<div class="line">25. Call Me An Optimist 9.75</div>
 <div class="line">27. <strong>The New Mendoza Line 8.0</strong></div>
 </div>
 </div>
