--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1227,6 +1227,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>1.0</td>
 </tr>
+<tr><td>25</td>
+<td>MUSIC CITY BOWL</td>
+<td>Tennessee</td>
+<td>Illiniois</td>
+<td>4.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1331,23 +1364,23 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>22.25</strong></td>
+<td><strong>23.75</strong></td>
 <td><strong>24.75</strong></td>
 <td><strong>22.75</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>11.0</strong></td>
-<td><strong>24.75</strong></td>
+<td><strong>26.25</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>25.5</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>27.0</strong></td>
 <td><strong>22.0</strong></td>
-<td><strong>23.75</strong></td>
+<td><strong>25.25</strong></td>
 <td><strong>18.75</strong></td>
-<td><strong>15.75</strong></td>
+<td><strong>17.25</strong></td>
 <td><strong>21.25</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>13.75</strong></td>
+<td><strong>15.25</strong></td>
 <td><strong>22.5</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>17.75</strong></td>
