--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-30 20:11:13</em></div>
-<div class="line"><em>Last bowl scored:  MUSIC CITY BOWL (Tennessee vs. Illiniois)</em></div>
+<div class="line"><em>Last updated:  2025-12-31 02:21:38</em></div>
+<div class="line"><em>Last bowl scored:  ALAMO BOWL (USC vs. TCU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Battered Austin Syndrome 27.0</strong></div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 26.25</strong></div>
+<div class="line">1. <strong>Battered Austin Syndrome 28.5</strong></div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 27.75</strong></div>
+<div class="line">3. Barkside Ballers 25.25</div>
 <div class="line">3. Mama Dawg 25.25</div>
-<div class="line">4. <strong>Vibe-free since '73 24.75</strong></div>
-<div class="line">5. Barkside Ballers 23.75</div>
-<div class="line">6. Eclipse 23.25</div>
-<div class="line">7. Dazed and Confoosballed 22.75</div>
-<div class="line">8. Down 22.5</div>
-<div class="line">9. Bearly Watching 22.25</div>
-<div class="line">10. Arandas legacy Year 22.0</div>
-<div class="line">11. Wisconsin shoud've been here 21.25</div>
-<div class="line">12. #MamaBear 21.0</div>
-<div class="line">12. Just Call Me Dr. 21.0</div>
-<div class="line">14. Upside 20.75</div>
-<div class="line">15. BlueOrRed 20.0</div>
-<div class="line">16. We Pay Players 19.75</div>
-<div class="line">17. Sierra LeCat Dowdle 19.25</div>
-<div class="line">18. Game of Throws 19.0</div>
-<div class="line">19. NoNND-Bo 1 18.75</div>
-<div class="line">20. First Round SIL 17.75</div>
-<div class="line">21. NoNND-Bo 2 17.25</div>
-<div class="line">22. bugaroo 17.0</div>
-<div class="line">23. Momma Longhorn 16.75</div>
-<div class="line">23. Not So New Guy 16.75</div>
-<div class="line">25. Sascha Picks Dogs 16.25</div>
-<div class="line">26. Call Me An Optimist 15.25</div>
+<div class="line">5. <strong>Vibe-free since '73 24.75</strong></div>
+<div class="line">6. Arandas legacy Year 23.5</div>
+<div class="line">7. Eclipse 23.25</div>
+<div class="line">8. Dazed and Confoosballed 22.75</div>
+<div class="line">8. Wisconsin shoud've been here 22.75</div>
+<div class="line">10. Down 22.5</div>
+<div class="line">10. Just Call Me Dr. 22.5</div>
+<div class="line">12. Bearly Watching 22.25</div>
+<div class="line">13. BlueOrRed 21.5</div>
+<div class="line">14. We Pay Players 21.25</div>
+<div class="line">15. #MamaBear 21.0</div>
+<div class="line">16. Sierra LeCat Dowdle 20.75</div>
+<div class="line">16. Upside 20.75</div>
+<div class="line">18. NoNND-Bo 2 19.75</div>
+<div class="line">19. Game of Throws 19.0</div>
+<div class="line">20. NoNND-Bo 1 18.75</div>
+<div class="line">21. Sascha Picks Dogs 17.75</div>
+<div class="line">21. First Round SIL 17.75</div>
+<div class="line">23. bugaroo 17.0</div>
+<div class="line">24. Momma Longhorn 16.75</div>
+<div class="line">24. Call Me An Optimist 16.75</div>
+<div class="line">24. Not So New Guy 16.75</div>
 <div class="line">27. <strong>The New Mendoza Line 11.0</strong></div>
 </div>
 </div>
