--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1128,37 +1128,70 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>22</td>
+<td>ALAMO BOWL</td>
+<td>USC</td>
+<td>TCU</td>
+<td>6.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>17.25</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>15.25</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>9.75</strong></td>
+<td><strong>11.25</strong></td>
 <td><strong>8.0</strong></td>
-<td><strong>18.75</strong></td>
+<td><strong>20.25</strong></td>
 <td><strong>10.75</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>18.0</strong></td>
+<td><strong>15.25</strong></td>
+<td><strong>17.0</strong></td>
+<td><strong>19.5</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>14.75</strong></td>
+<td><strong>13.25</strong></td>
+<td><strong>16.25</strong></td>
 <td><strong>13.75</strong></td>
-<td><strong>9.75</strong></td>
+<td><strong>11.25</strong></td>
 <td><strong>12.0</strong></td>
 <td><strong>16.25</strong></td>
 <td><strong>11.75</strong></td>
 <td><strong>14.0</strong></td>
-<td><strong>14.0</strong></td>
-<td><strong>14.0</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>15.5</strong></td>
 <td><strong>12.75</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>13.25</strong></td>
 <td><strong>15.0</strong></td>
 </tr>
 </tbody>
