--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1260,6 +1260,39 @@ ul.auto-toc {
 <td>0.0</td>
 <td>0.0</td>
 </tr>
+<tr><td>26</td>
+<td>ALAMO BOWL</td>
+<td>USC</td>
+<td>TCU</td>
+<td>6.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1364,32 +1397,32 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>23.75</strong></td>
+<td><strong>25.25</strong></td>
 <td><strong>24.75</strong></td>
 <td><strong>22.75</strong></td>
-<td><strong>16.25</strong></td>
+<td><strong>17.75</strong></td>
 <td><strong>11.0</strong></td>
-<td><strong>26.25</strong></td>
+<td><strong>27.75</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>19.25</strong></td>
-<td><strong>27.0</strong></td>
-<td><strong>22.0</strong></td>
+<td><strong>20.75</strong></td>
+<td><strong>28.5</strong></td>
+<td><strong>23.5</strong></td>
 <td><strong>25.25</strong></td>
 <td><strong>18.75</strong></td>
-<td><strong>17.25</strong></td>
-<td><strong>21.25</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>15.25</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>22.5</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>17.75</strong></td>
 <td><strong>21.0</strong></td>
-<td><strong>20.0</strong></td>
-<td><strong>21.0</strong></td>
+<td><strong>21.5</strong></td>
+<td><strong>22.5</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>20.75</strong></td>
-<td><strong>19.75</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>19.0</strong></td>
 </tr>
 </tbody>
