--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,36 +365,36 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-30 20:11:11</em></div>
-<div class="line"><em>Last bowl scored:  MUSIC CITY BOWL (Tennessee vs. Illiniois)</em></div>
+<div class="line"><em>Last updated:  2025-12-31 02:21:36</em></div>
+<div class="line"><em>Last bowl scored:  ALAMO BOWL (USC vs. TCU)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Sherrone Moore's Bad Day 18.75</strong></div>
-<div class="line">2. Arandas legacy Year 18.0</div>
-<div class="line">3. Barkside Ballers 17.25</div>
-<div class="line">4. Dazed and Confoosballed 16.75</div>
-<div class="line">4. Mama Dawg 16.75</div>
-<div class="line">4. Upside 16.75</div>
-<div class="line">7. Eclipse 16.25</div>
-<div class="line">8. <strong>Battered Austin Syndrome 15.5</strong></div>
-<div class="line">9. <strong>Vibe-free since '73 15.25</strong></div>
-<div class="line">10. Game of Throws 15.0</div>
-<div class="line">11. NoNND-Bo 1 14.75</div>
-<div class="line">11. Wisconsin shoud've been here 14.75</div>
-<div class="line">13. #MamaBear 14.0</div>
-<div class="line">13. BlueOrRed 14.0</div>
-<div class="line">13. Just Call Me Dr. 14.0</div>
-<div class="line">16. Sierra LeCat Dowdle 13.75</div>
-<div class="line">16. Bearly Watching 13.75</div>
-<div class="line">18. Not So New Guy 12.75</div>
-<div class="line">19. Down 12.0</div>
-<div class="line">20. First Round SIL 11.75</div>
-<div class="line">20. We Pay Players 11.75</div>
-<div class="line">22. Momma Longhorn 10.75</div>
-<div class="line">22. NoNND-Bo 2 10.75</div>
-<div class="line">24. bugaroo 10.0</div>
-<div class="line">25. Sascha Picks Dogs 9.75</div>
-<div class="line">25. Call Me An Optimist 9.75</div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 20.25</strong></div>
+<div class="line">2. Arandas legacy Year 19.5</div>
+<div class="line">3. Barkside Ballers 18.75</div>
+<div class="line">4. <strong>Battered Austin Syndrome 17.0</strong></div>
+<div class="line">5. Dazed and Confoosballed 16.75</div>
+<div class="line">5. Mama Dawg 16.75</div>
+<div class="line">5. Upside 16.75</div>
+<div class="line">8. Wisconsin shoud've been here 16.25</div>
+<div class="line">8. Eclipse 16.25</div>
+<div class="line">10. BlueOrRed 15.5</div>
+<div class="line">10. Just Call Me Dr. 15.5</div>
+<div class="line">12. <strong>Vibe-free since '73 15.25</strong></div>
+<div class="line">12. Sierra LeCat Dowdle 15.25</div>
+<div class="line">14. Game of Throws 15.0</div>
+<div class="line">15. NoNND-Bo 1 14.75</div>
+<div class="line">16. #MamaBear 14.0</div>
+<div class="line">17. Bearly Watching 13.75</div>
+<div class="line">18. NoNND-Bo 2 13.25</div>
+<div class="line">18. We Pay Players 13.25</div>
+<div class="line">20. Not So New Guy 12.75</div>
+<div class="line">21. Down 12.0</div>
+<div class="line">22. First Round SIL 11.75</div>
+<div class="line">23. Sascha Picks Dogs 11.25</div>
+<div class="line">23. Call Me An Optimist 11.25</div>
+<div class="line">25. Momma Longhorn 10.75</div>
+<div class="line">26. bugaroo 10.0</div>
 <div class="line">27. <strong>The New Mendoza Line 8.0</strong></div>
 </div>
 </div>
