--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-31 02:21:38</em></div>
-<div class="line"><em>Last bowl scored:  ALAMO BOWL (USC vs. TCU)</em></div>
+<div class="line"><em>Last updated:  2025-12-31 14:41:49</em></div>
+<div class="line"><em>Last bowl scored:  RELIAQUEST BOWL (Vanderbilt vs. Iowa)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Battered Austin Syndrome 28.5</strong></div>
 <div class="line">2. <strong>Sherrone Moore's Bad Day 27.75</strong></div>
-<div class="line">3. Barkside Ballers 25.25</div>
-<div class="line">3. Mama Dawg 25.25</div>
+<div class="line">3. Barkside Ballers 26.75</div>
+<div class="line">4. Mama Dawg 25.25</div>
 <div class="line">5. <strong>Vibe-free since '73 24.75</strong></div>
 <div class="line">6. Arandas legacy Year 23.5</div>
 <div class="line">7. Eclipse 23.25</div>
 <div class="line">8. Dazed and Confoosballed 22.75</div>
 <div class="line">8. Wisconsin shoud've been here 22.75</div>
-<div class="line">10. Down 22.5</div>
-<div class="line">10. Just Call Me Dr. 22.5</div>
-<div class="line">12. Bearly Watching 22.25</div>
-<div class="line">13. BlueOrRed 21.5</div>
-<div class="line">14. We Pay Players 21.25</div>
-<div class="line">15. #MamaBear 21.0</div>
-<div class="line">16. Sierra LeCat Dowdle 20.75</div>
-<div class="line">16. Upside 20.75</div>
-<div class="line">18. NoNND-Bo 2 19.75</div>
-<div class="line">19. Game of Throws 19.0</div>
-<div class="line">20. NoNND-Bo 1 18.75</div>
-<div class="line">21. Sascha Picks Dogs 17.75</div>
-<div class="line">21. First Round SIL 17.75</div>
-<div class="line">23. bugaroo 17.0</div>
-<div class="line">24. Momma Longhorn 16.75</div>
-<div class="line">24. Call Me An Optimist 16.75</div>
-<div class="line">24. Not So New Guy 16.75</div>
-<div class="line">27. <strong>The New Mendoza Line 11.0</strong></div>
+<div class="line">8. We Pay Players 22.75</div>
+<div class="line">11. Down 22.5</div>
+<div class="line">11. Just Call Me Dr. 22.5</div>
+<div class="line">13. Sierra LeCat Dowdle 22.25</div>
+<div class="line">13. Bearly Watching 22.25</div>
+<div class="line">15. BlueOrRed 21.5</div>
+<div class="line">16. NoNND-Bo 2 21.25</div>
+<div class="line">17. #MamaBear 21.0</div>
+<div class="line">18. Upside 20.75</div>
+<div class="line">19. Sascha Picks Dogs 20.25</div>
+<div class="line">20. Game of Throws 19.0</div>
+<div class="line">21. NoNND-Bo 1 18.75</div>
+<div class="line">22. Call Me An Optimist 18.25</div>
+<div class="line">23. First Round SIL 17.75</div>
+<div class="line">24. bugaroo 17.0</div>
+<div class="line">25. Momma Longhorn 16.75</div>
+<div class="line">25. Not So New Guy 16.75</div>
+<div class="line">27. <strong>The New Mendoza Line 12.5</strong></div>
 </div>
 </div>
 </body>
