--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1293,6 +1293,39 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>27</td>
+<td>RELIAQUEST BOWL</td>
+<td>Vanderbilt</td>
+<td>Iowa</td>
+<td>5.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1397,23 +1430,23 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>25.25</strong></td>
+<td><strong>26.75</strong></td>
 <td><strong>24.75</strong></td>
 <td><strong>22.75</strong></td>
-<td><strong>17.75</strong></td>
-<td><strong>11.0</strong></td>
+<td><strong>20.25</strong></td>
+<td><strong>12.5</strong></td>
 <td><strong>27.75</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>17.0</strong></td>
-<td><strong>20.75</strong></td>
+<td><strong>22.25</strong></td>
 <td><strong>28.5</strong></td>
 <td><strong>23.5</strong></td>
 <td><strong>25.25</strong></td>
 <td><strong>18.75</strong></td>
-<td><strong>19.75</strong></td>
+<td><strong>21.25</strong></td>
 <td><strong>22.75</strong></td>
 <td><strong>22.25</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>18.25</strong></td>
 <td><strong>22.5</strong></td>
 <td><strong>23.25</strong></td>
 <td><strong>17.75</strong></td>
@@ -1422,7 +1455,7 @@ ul.auto-toc {
 <td><strong>22.5</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>20.75</strong></td>
-<td><strong>21.25</strong></td>
+<td><strong>22.75</strong></td>
 <td><strong>19.0</strong></td>
 </tr>
 </tbody>
