--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1161,28 +1161,61 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>23</td>
+<td>RELIAQUEST BOWL</td>
+<td>Vanderbilt</td>
+<td>Iowa</td>
+<td>5.5</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>2.5<sup>*</sup></td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.5</td>
+<td>0.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>18.75</strong></td>
+<td><strong>20.25</strong></td>
 <td><strong>15.25</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>11.25</strong></td>
-<td><strong>8.0</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>20.25</strong></td>
 <td><strong>10.75</strong></td>
 <td><strong>10.0</strong></td>
-<td><strong>15.25</strong></td>
+<td><strong>16.75</strong></td>
 <td><strong>17.0</strong></td>
 <td><strong>19.5</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>13.25</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>16.25</strong></td>
 <td><strong>13.75</strong></td>
-<td><strong>11.25</strong></td>
+<td><strong>12.75</strong></td>
 <td><strong>12.0</strong></td>
 <td><strong>16.25</strong></td>
 <td><strong>11.75</strong></td>
@@ -1191,7 +1224,7 @@ ul.auto-toc {
 <td><strong>15.5</strong></td>
 <td><strong>12.75</strong></td>
 <td><strong>16.75</strong></td>
-<td><strong>13.25</strong></td>
+<td><strong>14.75</strong></td>
 <td><strong>15.0</strong></td>
 </tr>
 </tbody>
