--- a/bowl_pool/2025-2026_Non-CFP/rankings.html
+++ b/bowl_pool/2025-2026_Non-CFP/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-31 14:41:46</em></div>
-<div class="line"><em>Last bowl scored:  RELIAQUEST BOWL (Vanderbilt vs. Iowa)</em></div>
+<div class="line"><em>Last updated:  2025-12-31 22:20:30</em></div>
+<div class="line"><em>Last bowl scored:  LAS VEGAS BOWL (Utah vs. Nebraska)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. Barkside Ballers 20.25</div>
-<div class="line">1. <strong>Sherrone Moore's Bad Day 20.25</strong></div>
-<div class="line">3. Arandas legacy Year 19.5</div>
-<div class="line">4. <strong>Battered Austin Syndrome 17.0</strong></div>
-<div class="line">5. Dazed and Confoosballed 16.75</div>
-<div class="line">5. Sierra LeCat Dowdle 16.75</div>
-<div class="line">5. Mama Dawg 16.75</div>
-<div class="line">5. Upside 16.75</div>
-<div class="line">9. Wisconsin shoud've been here 16.25</div>
-<div class="line">9. Eclipse 16.25</div>
-<div class="line">11. BlueOrRed 15.5</div>
-<div class="line">11. Just Call Me Dr. 15.5</div>
-<div class="line">13. <strong>Vibe-free since '73 15.25</strong></div>
-<div class="line">14. Game of Throws 15.0</div>
-<div class="line">15. NoNND-Bo 1 14.75</div>
-<div class="line">15. NoNND-Bo 2 14.75</div>
-<div class="line">15. We Pay Players 14.75</div>
-<div class="line">18. #MamaBear 14.0</div>
-<div class="line">19. Sascha Picks Dogs 13.75</div>
-<div class="line">19. Bearly Watching 13.75</div>
-<div class="line">21. Call Me An Optimist 12.75</div>
-<div class="line">21. Not So New Guy 12.75</div>
-<div class="line">23. Down 12.0</div>
-<div class="line">24. First Round SIL 11.75</div>
-<div class="line">25. Momma Longhorn 10.75</div>
-<div class="line">26. bugaroo 10.0</div>
-<div class="line">27. <strong>The New Mendoza Line 9.5</strong></div>
+<div class="line">1. Barkside Ballers 23.25</div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 21.25</strong></div>
+<div class="line">3. Dazed and Confoosballed 20.75</div>
+<div class="line">4. Arandas legacy Year 20.5</div>
+<div class="line">5. <strong>Battered Austin Syndrome 20.0</strong></div>
+<div class="line">6. <strong>Vibe-free since '73 19.25</strong></div>
+<div class="line">6. Wisconsin shoud've been here 19.25</div>
+<div class="line">6. Eclipse 19.25</div>
+<div class="line">9. Game of Throws 19.0</div>
+<div class="line">10. Mama Dawg 18.75</div>
+<div class="line">10. Upside 18.75</div>
+<div class="line">12. BlueOrRed 18.5</div>
+<div class="line">12. Just Call Me Dr. 18.5</div>
+<div class="line">14. Sierra LeCat Dowdle 17.75</div>
+<div class="line">14. Bearly Watching 17.75</div>
+<div class="line">14. We Pay Players 17.75</div>
+<div class="line">17. NoNND-Bo 1 16.75</div>
+<div class="line">18. #MamaBear 16.0</div>
+<div class="line">19. Momma Longhorn 15.75</div>
+<div class="line">19. Not So New Guy 15.75</div>
+<div class="line">21. NoNND-Bo 2 14.75</div>
+<div class="line">22. bugaroo 14.0</div>
+<div class="line">22. Down 14.0</div>
+<div class="line">24. Sascha Picks Dogs 13.75</div>
+<div class="line">24. First Round SIL 13.75</div>
+<div class="line">26. Call Me An Optimist 12.75</div>
+<div class="line">27. <strong>The New Mendoza Line 12.5</strong></div>
 </div>
 </div>
 </body>
