--- a/bowl_pool/2025-2026/rankings.html
+++ b/bowl_pool/2025-2026/rankings.html
@@ -365,37 +365,37 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-31 14:41:49</em></div>
-<div class="line"><em>Last bowl scored:  RELIAQUEST BOWL (Vanderbilt vs. Iowa)</em></div>
+<div class="line"><em>Last updated:  2025-12-31 22:20:33</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Cotton) (Ohio State vs. Miami)</em></div>
 </div>
 <div class="line-block">
-<div class="line">1. <strong>Battered Austin Syndrome 28.5</strong></div>
-<div class="line">2. <strong>Sherrone Moore's Bad Day 27.75</strong></div>
-<div class="line">3. Barkside Ballers 26.75</div>
-<div class="line">4. Mama Dawg 25.25</div>
-<div class="line">5. <strong>Vibe-free since '73 24.75</strong></div>
-<div class="line">6. Arandas legacy Year 23.5</div>
-<div class="line">7. Eclipse 23.25</div>
-<div class="line">8. Dazed and Confoosballed 22.75</div>
-<div class="line">8. Wisconsin shoud've been here 22.75</div>
-<div class="line">8. We Pay Players 22.75</div>
-<div class="line">11. Down 22.5</div>
-<div class="line">11. Just Call Me Dr. 22.5</div>
-<div class="line">13. Sierra LeCat Dowdle 22.25</div>
-<div class="line">13. Bearly Watching 22.25</div>
-<div class="line">15. BlueOrRed 21.5</div>
-<div class="line">16. NoNND-Bo 2 21.25</div>
-<div class="line">17. #MamaBear 21.0</div>
-<div class="line">18. Upside 20.75</div>
-<div class="line">19. Sascha Picks Dogs 20.25</div>
-<div class="line">20. Game of Throws 19.0</div>
-<div class="line">21. NoNND-Bo 1 18.75</div>
-<div class="line">22. Call Me An Optimist 18.25</div>
-<div class="line">23. First Round SIL 17.75</div>
-<div class="line">24. bugaroo 17.0</div>
-<div class="line">25. Momma Longhorn 16.75</div>
-<div class="line">25. Not So New Guy 16.75</div>
-<div class="line">27. <strong>The New Mendoza Line 12.5</strong></div>
+<div class="line">1. <strong>Sherrone Moore's Bad Day 31.75</strong></div>
+<div class="line">2. <strong>Battered Austin Syndrome 31.5</strong></div>
+<div class="line">3. Barkside Ballers 29.75</div>
+<div class="line">4. <strong>Vibe-free since '73 28.75</strong></div>
+<div class="line">5. Mama Dawg 27.25</div>
+<div class="line">6. Dazed and Confoosballed 26.75</div>
+<div class="line">7. Bearly Watching 26.25</div>
+<div class="line">7. Eclipse 26.25</div>
+<div class="line">9. Wisconsin shoud've been here 25.75</div>
+<div class="line">9. We Pay Players 25.75</div>
+<div class="line">11. Just Call Me Dr. 25.5</div>
+<div class="line">12. Arandas legacy Year 24.5</div>
+<div class="line">12. Down 24.5</div>
+<div class="line">12. BlueOrRed 24.5</div>
+<div class="line">15. NoNND-Bo 2 24.25</div>
+<div class="line">16. Sascha Picks Dogs 23.25</div>
+<div class="line">16. Sierra LeCat Dowdle 23.25</div>
+<div class="line">18. #MamaBear 23.0</div>
+<div class="line">18. Game of Throws 23.0</div>
+<div class="line">20. Upside 22.75</div>
+<div class="line">21. Momma Longhorn 21.75</div>
+<div class="line">22. Call Me An Optimist 21.25</div>
+<div class="line">23. bugaroo 21.0</div>
+<div class="line">24. NoNND-Bo 1 20.75</div>
+<div class="line">25. First Round SIL 19.75</div>
+<div class="line">25. Not So New Guy 19.75</div>
+<div class="line">27. <strong>The New Mendoza Line 15.5</strong></div>
 </div>
 </div>
 </body>
