--- a/bowl_pool/2025-2026/results.html
+++ b/bowl_pool/2025-2026/results.html
@@ -1326,6 +1326,138 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>28</td>
+<td>SUN BOWL</td>
+<td>Duke</td>
+<td>Arizona State</td>
+<td>1.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>29</td>
+<td>CITRUS BOWL</td>
+<td>Texas</td>
+<td>Michigan</td>
+<td>7.5</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+</tr>
+<tr><td>30</td>
+<td>LAS VEGAS BOWL</td>
+<td>Utah</td>
+<td>Nebraska</td>
+<td>16.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>31</td>
+<td>CFP Quarterfinal (Cotton)</td>
+<td>Ohio State</td>
+<td>Miami</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -1430,33 +1562,33 @@ ul.auto-toc {
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
+<td><strong>29.75</strong></td>
+<td><strong>28.75</strong></td>
 <td><strong>26.75</strong></td>
-<td><strong>24.75</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>12.5</strong></td>
-<td><strong>27.75</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>28.5</strong></td>
-<td><strong>23.5</strong></td>
-<td><strong>25.25</strong></td>
-<td><strong>18.75</strong></td>
-<td><strong>21.25</strong></td>
-<td><strong>22.75</strong></td>
-<td><strong>22.25</strong></td>
-<td><strong>18.25</strong></td>
-<td><strong>22.5</strong></td>
 <td><strong>23.25</strong></td>
-<td><strong>17.75</strong></td>
+<td><strong>15.5</strong></td>
+<td><strong>31.75</strong></td>
+<td><strong>21.75</strong></td>
 <td><strong>21.0</strong></td>
-<td><strong>21.5</strong></td>
-<td><strong>22.5</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>31.5</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>27.25</strong></td>
 <td><strong>20.75</strong></td>
+<td><strong>24.25</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>26.25</strong></td>
+<td><strong>19.75</strong></td>
+<td><strong>23.0</strong></td>
+<td><strong>24.5</strong></td>
+<td><strong>25.5</strong></td>
+<td><strong>19.75</strong></td>
 <td><strong>22.75</strong></td>
-<td><strong>19.0</strong></td>
+<td><strong>25.75</strong></td>
+<td><strong>23.0</strong></td>
 </tr>
 </tbody>
 </table>
