--- a/bowl_pool/2025-2026_Non-CFP/results.html
+++ b/bowl_pool/2025-2026_Non-CFP/results.html
@@ -1194,38 +1194,137 @@ ul.auto-toc {
 <td>1.5</td>
 <td>0.0</td>
 </tr>
+<tr><td>24</td>
+<td>SUN BOWL</td>
+<td>Duke</td>
+<td>Arizona State</td>
+<td>1.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+</tr>
+<tr><td>25</td>
+<td>CITRUS BOWL</td>
+<td>Texas</td>
+<td>Michigan</td>
+<td>7.5</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+</tr>
+<tr><td>26</td>
+<td>LAS VEGAS BOWL</td>
+<td>Utah</td>
+<td>Nebraska</td>
+<td>16.5</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>0.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>1.0</td>
+<td>1.0</td>
+<td>2.0<sup>*</sup></td>
+<td>2.0<sup>*</sup></td>
+<td>1.0</td>
+<td>0.0</td>
+<td>1.0</td>
+</tr>
 <tr><td><strong>Totals</strong></td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
 <td>&nbsp;</td>
-<td><strong>20.25</strong></td>
-<td><strong>15.25</strong></td>
-<td><strong>16.75</strong></td>
+<td><strong>23.25</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>20.75</strong></td>
 <td><strong>13.75</strong></td>
-<td><strong>9.5</strong></td>
-<td><strong>20.25</strong></td>
-<td><strong>10.75</strong></td>
-<td><strong>10.0</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>17.0</strong></td>
-<td><strong>19.5</strong></td>
-<td><strong>16.75</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>14.75</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>13.75</strong></td>
-<td><strong>12.75</strong></td>
-<td><strong>12.0</strong></td>
-<td><strong>16.25</strong></td>
-<td><strong>11.75</strong></td>
+<td><strong>12.5</strong></td>
+<td><strong>21.25</strong></td>
+<td><strong>15.75</strong></td>
 <td><strong>14.0</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>15.5</strong></td>
-<td><strong>12.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>20.0</strong></td>
+<td><strong>20.5</strong></td>
+<td><strong>18.75</strong></td>
 <td><strong>16.75</strong></td>
 <td><strong>14.75</strong></td>
-<td><strong>15.0</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>12.75</strong></td>
+<td><strong>14.0</strong></td>
+<td><strong>19.25</strong></td>
+<td><strong>13.75</strong></td>
+<td><strong>16.0</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>18.5</strong></td>
+<td><strong>15.75</strong></td>
+<td><strong>18.75</strong></td>
+<td><strong>17.75</strong></td>
+<td><strong>19.0</strong></td>
 </tr>
 </tbody>
 </table>
