--- a/bowl_pool/2025-2026_CFP/rankings.html
+++ b/bowl_pool/2025-2026_CFP/rankings.html
@@ -365,31 +365,31 @@ ul.auto-toc {
 
 
 <div class="line-block">
-<div class="line"><em>Last updated:  2025-12-31 22:20:32</em></div>
-<div class="line"><em>Last bowl scored:  CFP First Round (Oregon vs. James Madison)</em></div>
+<div class="line"><em>Last updated:  2025-12-31 22:23:46</em></div>
+<div class="line"><em>Last bowl scored:  CFP Quarterfinal (Cotton) (Ohio State vs. Miami)</em></div>
 </div>
 <div class="line-block">
 <div class="line">1. <strong>Battered Austin Syndrome 11.5</strong></div>
+<div class="line">2. <strong>Sherrone Moore's Bad Day 10.5</strong></div>
 <div class="line">2. Down 10.5</div>
-<div class="line">3. <strong>Vibe-free since '73 9.5</strong></div>
-<div class="line">4. Mama Dawg 8.5</div>
-<div class="line">4. Bearly Watching 8.5</div>
-<div class="line">6. We Pay Players 8.0</div>
-<div class="line">7. <strong>Sherrone Moore's Bad Day 7.5</strong></div>
-<div class="line">8. bugaroo 7.0</div>
-<div class="line">8. Eclipse 7.0</div>
-<div class="line">8. #MamaBear 7.0</div>
-<div class="line">8. Just Call Me Dr. 7.0</div>
-<div class="line">12. Barkside Ballers 6.5</div>
-<div class="line">12. Sascha Picks Dogs 6.5</div>
-<div class="line">12. NoNND-Bo 2 6.5</div>
-<div class="line">12. Wisconsin shoud've been here 6.5</div>
-<div class="line">16. Dazed and Confoosballed 6.0</div>
-<div class="line">16. Momma Longhorn 6.0</div>
-<div class="line">16. First Round SIL 6.0</div>
-<div class="line">16. BlueOrRed 6.0</div>
-<div class="line">20. Sierra LeCat Dowdle 5.5</div>
-<div class="line">20. Call Me An Optimist 5.5</div>
+<div class="line">4. <strong>Vibe-free since '73 9.5</strong></div>
+<div class="line">4. Sascha Picks Dogs 9.5</div>
+<div class="line">4. NoNND-Bo 2 9.5</div>
+<div class="line">7. Mama Dawg 8.5</div>
+<div class="line">7. Bearly Watching 8.5</div>
+<div class="line">7. Call Me An Optimist 8.5</div>
+<div class="line">10. We Pay Players 8.0</div>
+<div class="line">11. bugaroo 7.0</div>
+<div class="line">11. Eclipse 7.0</div>
+<div class="line">11. #MamaBear 7.0</div>
+<div class="line">11. Just Call Me Dr. 7.0</div>
+<div class="line">15. Barkside Ballers 6.5</div>
+<div class="line">15. Wisconsin shoud've been here 6.5</div>
+<div class="line">17. Dazed and Confoosballed 6.0</div>
+<div class="line">17. Momma Longhorn 6.0</div>
+<div class="line">17. First Round SIL 6.0</div>
+<div class="line">17. BlueOrRed 6.0</div>
+<div class="line">21. Sierra LeCat Dowdle 5.5</div>
 <div class="line">22. Arandas legacy Year 4.0</div>
 <div class="line">22. NoNND-Bo 1 4.0</div>
 <div class="line">22. Not So New Guy 4.0</div>
