--- a/bowl_pool/2025-2026_CFP/results.html
+++ b/bowl_pool/2025-2026_CFP/results.html
@@ -567,6 +567,39 @@ ul.auto-toc {
 <td>2.0</td>
 <td>2.0</td>
 </tr>
+<tr><td>5</td>
+<td>CFP Quarterfinal (Cotton)</td>
+<td>Ohio State</td>
+<td>Miami</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>3.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+<td>0.0</td>
+</tr>
 <tr><td>B1</td>
 <td>How many TD's will Marcel Reed run for?</td>
 <td>&nbsp;</td>
@@ -674,9 +707,9 @@ ul.auto-toc {
 <td><strong>6.5</strong></td>
 <td><strong>9.5</strong></td>
 <td><strong>6.0</strong></td>
-<td><strong>6.5</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>3.0</strong></td>
-<td><strong>7.5</strong></td>
+<td><strong>10.5</strong></td>
 <td><strong>6.0</strong></td>
 <td><strong>7.0</strong></td>
 <td><strong>5.5</strong></td>
@@ -684,10 +717,10 @@ ul.auto-toc {
 <td><strong>4.0</strong></td>
 <td><strong>8.5</strong></td>
 <td><strong>4.0</strong></td>
-<td><strong>6.5</strong></td>
+<td><strong>9.5</strong></td>
 <td><strong>6.5</strong></td>
 <td><strong>8.5</strong></td>
-<td><strong>5.5</strong></td>
+<td><strong>8.5</strong></td>
 <td><strong>10.5</strong></td>
 <td><strong>7.0</strong></td>
 <td><strong>6.0</strong></td>
